k8s/api-gateway.yaml
# k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 191798899175.dkr.ecr.us-east-1.amazonaws.com/api-gateway:v1
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: devops-app
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 5002
  type: NodePort
