k8s/order-service.yaml
# k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order
          image: 191798899175.dkr.ecr.us-east-1.amazonaws.com/order-service:v1
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: devops-app
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 5001
  type: ClusterIP
