k8s/user-service.yaml
# k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user
          image: 191798899175.dkr.ecr.us-east-1.amazonaws.com/user-service:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: devops-app
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
